<resources>
    <string name="app_name">Database Demo with Tables</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="database">DATABASE</string>
    <string name="display">Display</string>
    <string name="show_all">Show All</string>
    <string name="delete_all">Delete All</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="first">First</string>
    <string name="last">Last</string>
    <string name="id">ID</string>
</resources>
