<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rabor.databasedemowithtables.DisplayListActivity">

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:shrinkColumns="*"
        android:stretchColumns="*" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/border">

            <TextView
                style="@style/MyTextView.Label"
                android:id="@+id/idTV"
                android:text="@string/id"/>

            <TextView
                style="@style/MyTextView.Label"
                android:id="@+id/firstTV"
                android:text="@string/first"/>

            <TextView
                style="@style/MyTextView.Label"
                android:id="@+id/lastTV"
                android:text="@string/last"/>

        </TableRow>
    </TableLayout>
</ScrollView>
